Adjust layout and text sizing

--- a/index.html
+++ b/index.html
@@ -53,14 +53,8 @@
 <body id="page" class="bg-white text-black overflow-hidden light-mode">
   <main class="relative h-screen w-screen">
 
-    <!-- Cat ears -->
-    <div class="earbar">
-      <pre id="ear-left" class="ear"></pre>
-      <pre id="ear-right" class="ear"></pre>
-    </div>
-
     <!-- Top navigation -->
-    <div class="nav absolute top-8 left-12 right-12 flex justify-between items-center text-[18px] text-white opacity-70">
+    <div class="nav absolute top-8 left-12 right-12 flex justify-between items-center text-[14px] text-white opacity-70">
 
       <span class="nav-project tracking-wide cursor-pointer transition"
             onclick="window.location.href='projects.html'">
@@ -80,28 +74,28 @@
     <!-- Cat wrapper -->
     <div
       id="catWrap"
-      class="absolute left-[60%] top-[45%] -translate-x-1/2 -translate-y-1/2 w-[92vw] max-w-[820px]"
+      class="absolute left-[65%] top-[45%] -translate-x-1/2 -translate-y-1/2 w-[92vw] max-w-[820px]"
     >
       <pre id="trace"><span id="trace-chars"></span></pre>
     </div>
 
     <!-- bottom-left text -->
   <section class="idblock absolute left-12 bottom-16 max-w-[80vw] font-[Arial]">
-    <h1 class="text-[38px] leading-tight font-light"> addrita biswas</h1>
+    <h1 class="text-[32px] leading-tight font-light"> addrita biswas</h1>
 
-    <p class="mt-0 text-sm opacity-50">
+    <p class="mt-0 text-[14px] opacity-50">
       addritaside [at] gmail [dot] com
     </p>
 
-    <p class="mt-5 text-sm opacity-70 underline decoration-dotted decoration-current/40 underline-offset-4">
+    <p class="mt-5 text-[14px] opacity-70 underline decoration-dotted decoration-current/40 underline-offset-4">
       software engineering, design, &amp; writing
     </p>
 
-    <p class="mt-0.5 text-sm opacity-70">
+    <p class="mt-0.5 text-[14px] opacity-70">
       student engineer alum @ <i>google code next</i>
     </p>
 
-    <p class="mt-0.5 text-sm opacity-70">
+    <p class="mt-0.5 text-[14px] opacity-70">
       computer science @ <i>stonybrook university</i>
     </p>
   </section>
@@ -117,7 +111,7 @@
     var dir = 'inc';
     var max = frames.length;
     var fps = 35;
-    var SCALE = 0.50;
+    var SCALE = 0.43;
     var isLight = true;
 
     pre.addEventListener("mouseenter", () => {
