--- a/projects.html
+++ b/projects.html
@@ -47,15 +47,15 @@
     </script>
 
     <a href="index.html"
-    class="nav absolute top-8 left-12 text-[18px] opacity-70 transition
+    class="nav absolute top-8 left-12 right-12 flex justify-between items-center text-[15px] text-white opacity-70 transition
             text-white hover:text-white
             light:text-black light:hover:text-gray-500">
-    &lt; back
+    &lt; return
     </a>
 
 
-    <div class="fixed top-24 inset-x-0 pointer-events-none select-none z-50">
-    <div class="max-w-6xl ml-[480px] px-2 flex">
+    <div class="absolute top-12 inset-x-0 pointer-events-none select-none z-50">
+    <div class="max-w-6xl ml-[280px] px-2 flex">
         <!-- Left ear -->
         <div class="w-1/2 overflow-hidden">
         <pre id="ear-left"
@@ -71,7 +71,7 @@
     </div>
         </div>
 
-    <main class="relative z-10 max-w-5xl mx-auto px-10 pt-80 pb-24 translate-x-12">
+  <main class="relative z-10 max-w-5xl mx-auto px-10 pt-60 pb-24 translate-x-12 text-sm">
     <header class="mb-16">
       <h1 class="text-3xl font-medium">dev / design</h1>
       <p class="mt-3 opacity-60">
